--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -317,6 +317,7 @@
   "config_logOnScroll_label":         { "message": "Print logs from auto scrolling" },
   "config_logOnCollapseExpand_label": { "message": "Print logs from collapse/expand" },
   "config_logOnCache_label":          { "message": "Print logs from cached tree" },
+  "config_logOnFakeContextMenu_label": { "message": "Print logs from fake context menu" },
   "config_simulateSVGContextFill_label": { "message": "Activate workaround for the Bug 1388193 and Bug 1421329 to simulate SVG icons (*This may increase CPU usage. To deactivate this option, you need to activate \"svg.context-properties.content.enabled\" via \"about:config\", until these bugs are fixed.)" },
   "config_useCachedTree_label": { "message": "Optimize tree restoration with cache" },
   "config_useCachedTree_description": { "message": "*Please try unchecking and re-checking this to refresh the cache, when the behavior around tree is unstable." },
