--- a/webextensions/_locales/uk/messages.json
+++ b/webextensions/_locales/uk/messages.json
@@ -55,11 +55,13 @@
       "title": { "content": "$1", "example": "title" }
     }},
 
-  "bookmarkFolder_label": { "message": "$TITLE$ і більше",
+  "bookmarkFolder_label_default": { "message": "$TITLE$ і більше (%YEAR%.%MONTH%.%DATE%)",
     "placeholders": {
-      "title": { "content": "$1", "example": "title" }
+      "title": { "content": "$1", "example": "Title" },
+      "year":  { "content": "$2", "example": "2018" },
+      "month": { "content": "$3", "example": "06" },
+      "date":  { "content": "$4", "example": "21" }
     }},
-  "bookmarkFolder_label_default": { "message": "Дерево в закладках" },
 
   "bookmarkTree_notification_success_title": { "message": "Дерево успішно додано в закладки" },
   "bookmarkTree_notification_success_message": { "message": "$COUNT$ - стільки вкладок, включаючи \"$TITLE$\", додано в закладки, у нову папку під \"$PARENT$.",
