--- a/webextensions/_locales/zh_CN/messages.json
+++ b/webextensions/_locales/zh_CN/messages.json
@@ -25,11 +25,13 @@
     }},
   "groupTab_label_default": { "message": "组" },
 
-  "bookmarkFolder_label": { "message": "$TITLE$ 及更多",
+  "bookmarkFolder_label_default": { "message": "$TITLE$ 及更多 (%YEAR%.%MONTH%.%DATE%)",
     "placeholders": {
-      "title": { "content": "$1", "example": "title" }
+      "title": { "content": "$1", "example": "Title" },
+      "year":  { "content": "$2", "example": "2018" },
+      "month": { "content": "$3", "example": "06" },
+      "date":  { "content": "$4", "example": "21" }
     }},
-  "bookmarkFolder_label_default": { "message": "已加书签的树" },
 
   "bookmarkTree_notification_title": { "message": "成功为树添加书签" },
   "bookmarkTree_notification_message": { "message": "包括“$TITLE$”在内的 $COUNT$ 个标签页已添加为“$PARENT$”下的书签文件夹",
