--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -314,11 +314,13 @@
 
   "config_debug_label": { "message": "Debug mode" },
   "config_log_caption":               { "message": "Detaillierte Logs" },
+  "config_logFor_common":     { "message": "Logs von gemeinesamen Modulen" },
+  "config_logFor_background": { "message": "Logs von Hintergrundmodulen" },
+  "config_logFor_sidebar":    { "message": "Logs von Sidebar-Modulen" },
+  "config_logFor_misc":       { "message": "Logs von soonstigen Modulen" },
   "config_logOnUpdated_label":        { "message": "Logs ausgeben von tabs.onUpdated" },
   "config_logOnMouseEvent_label":     { "message": "Logs ausgeben von mouse events" },
-  "config_logOnScroll_label":         { "message": "Logs ausgeben von auto scrolling" },
   "config_logOnCollapseExpand_label": { "message": "Logs ausgeben von collapse/expand" },
-  "config_logOnCache_label":          { "message": "Logs ausgeben von zwischengespeichertem Baum" },
   "config_simulateSVGContextFill_label": { "message": "Workaround für Bug 1388193 und Bug 1421329 aktivieren um SVG-Icons zu simulieren (*Kann die CPU-Last erhöhen. Um diese Option zu deaktivieren, aktiviere \"svg.context-properties.content.enabled\" via \"about:config\", bis diese Bugs behoben sind.)" },
   "config_useCachedTree_label": { "message": "Zweig-Wiederherstellung mit Cache optimieren" },
   "config_acceleratedTabCreation_label": { "message": "Operationen zu neu geöffneten Tabs beschleunigen (*HINWEIS: Du wirst unstabilies Verhalten rund um Tabs feststellen.)" },
