--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -57,7 +57,7 @@
 
   "bookmarkFolder_label_default": { "message": "$TITLE$ und mehr (%YEAR%.%MONTH%.%DATE%)",
     "placeholders": {
-      "title": { "content": "$1", "example": "Title" },
+      "title": { "content": "$1", "example": "Titel" },
       "year":  { "content": "$2", "example": "2018" },
       "month": { "content": "$3", "example": "06" },
       "date":  { "content": "$4", "example": "21" }
@@ -275,6 +275,10 @@
   
   
   "config_advanced_caption": { "message": "Erweitert" },
+  
+  "config_bookmarkTreeFolderName_before": { "message": "Ordnernamen für \"Lesezeichen für diesen Zweig erstellen\":" },
++  "config_bookmarkTreeFolderName_after": { "message": "\u200b" },
++  "config_bookmarkTreeFolderName_description": { "message": "Verfügbare Platzhalter: %TITLE% (Titel des ersten Tabs), %URL% (URL des ersten Tabs), %YEAR% (Jahr, vierstellig), %MONTH% (Monat, zweistellig), %DATE% (Tag, zweistellig)" },
 
   "config_userStyleRules_label": { "message": "Style-Regeln für Sidebar-Inhalte" },
   "config_userStyleRules_description_before": { "message": "Für weitere Optionen siehe " },
