--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -15,6 +15,8 @@
   "command_focusPreviousSilently": { "message": "Zum vorherigen Tab wechseln (Zweig nicht ausklappen)" },
   "command_focusNext":             { "message": "Zum nächsten Tab wechseln (Zweig ausklappen)" },
   "command_focusNextSilently":     { "message": "Zum nächsten Tab wechseln (Zweig nicht ausklappen)" },
+  "command_focusParent":           { "message": "Zum übergeordneten Tab wechseln" },
+  "command_focusFirstChild":       { "message": "Zum ersten untergeordneten Tab wechseln" },
   "command_tabbarUp":              { "message": "Zeilenweise in Tabs nach oben scrollen" },
   "command_tabbarPageUp":          { "message": "Seitenweise in Tabs nach oben scrollen" },
   "command_tabbarHome":            { "message": "Zum ersten Tab scrollen" },
