--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -361,5 +361,16 @@
   "tabContextMenu_closeOther_label":  { "message": "他のタブをすべて閉じる(&O)" },
 
   "tabContextMenu_undoClose_label":   { "message": "閉じたタブを元に戻す(&U)" },
-  "tabContextMenu_close_label":       { "message": "タブを閉じる(&C)" }
+  "tabContextMenu_close_label":       { "message": "タブを閉じる(&C)" },
+
+  "tabContextMenu_reload_label_multiselected":      { "message": "選択したタブを再読み込み(&R)" },
+  "tabContextMenu_mute_label_multiselected":        { "message": "タブをミュート(&U)" },
+  "tabContextMenu_unmute_label_multiselected":      { "message": "タブのミュートを解除(&B)" },
+
+  "tabContextMenu_pin_label_multiselected":         { "message": "タブをピン留め(&P)" },
+  "tabContextMenu_unpin_label_multiselected":       { "message": "タブのピン留めを外す(&B)" },
+
+  "tabContextMenu_bookmark_label_multiselected": { "message": "タブをフックマーク(&K)…" },
+
+  "tabContextMenu_close_label_multiselected":       { "message": "選択したタブを閉じる(&S)" }
 }
