--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -25,9 +25,12 @@
   "command_tabbarEnd":             { "message": "Scroll Tabs to End" },
 
   "tab_closebox_tab_tooltip": { "message": "Close tab" },
+  "tab_closebox_tab_tooltip_multiselected": { "message": "Close tabs" },
   "tab_closebox_tree_tooltip": { "message": "Close tree" },
   "tab_soundButton_muted_tooltip": { "message": "Unmute tab" },
+  "tab_soundButton_muted_tooltip_multiselected": { "message": "Unmute tabs" },
   "tab_soundButton_playing_tooltip": { "message": "Mute tab" },
+  "tab_soundButton_playing_tooltip_multiselected": { "message": "Mute tabs" },
   "tab_twisty_expanded_tooltip": { "message": "Collapse tree" },
   "tab_twisty_collapsed_tooltip": { "message": "Expand tree" },
   "tab_tree_tooltip": { "message": "$TREE$\n  ...and $COUNT$ more tab(s)",
