--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -25,9 +25,12 @@
   "command_tabbarEnd":             { "message": "タブの一覧を末尾までスクロール" },
 
   "tab_closebox_tab_tooltip": { "message": "タブを閉じる" },
+  "tab_closebox_tab_tooltip_multiselected": { "message": "選択されたタブを閉じる" },
   "tab_closebox_tree_tooltip": { "message": "ツリーを閉じる" },
   "tab_soundButton_muted_tooltip": { "message": "タブのミュートを解除" },
+  "tab_soundButton_muted_tooltip_multiselected": { "message": "選択されたタブのミュートを解除" },
   "tab_soundButton_playing_tooltip": { "message": "タブをミュート" },
+  "tab_soundButton_playing_tooltip_multiselected": { "message": "選択されたタブをミュート" },
   "tab_twisty_expanded_tooltip": { "message": "ツリーをたたむ" },
   "tab_twisty_collapsed_tooltip": { "message": "ツリーを展開する" },
   "tab_tree_tooltip": { "message": "$TREE$\n  ...（省略されたタブ：$COUNT$個）",
