Update context menu labels for multiselected tabs

--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -43,7 +43,7 @@
   "tabbar_newTabAction_sibling_label":     { "message": "Tab auf der Ebene de&s aktiven Tab" },
   "tabbar_newTabAction_nextSibling_label": { "message": "direkte&n Nachbar auf der Ebene des aktiven Tab" },
 
-  "tabbar_newTabWithContexualIdentity_tooltip": { "message": "Neuer Container-Tab" },
+  "tabbar_newTabWithContexualIdentity_tooltip": { "message": "Neuer Tab in Umgebung" },
   "tabbar_newTabWithContexualIdentity_default": { "message": "Standard" },
 
   "groupTab_label": { "message": "$TITLE$ und mehr",
@@ -181,11 +181,11 @@
   "config_newTabButton_caption": { "message": "\"Neuer Tab\" Schaltfläche" },
   "config_longPressOnNewTabButton_before":               { "message": "Die Schaltfläche \"Neuer Tab\" lang gedrückt halten, um " },
   "config_longPressOnNewTabButton_newTabAction":         { "message": "auszuwählen, wo der neue Tab geöffnet werden soll" },
-  "config_longPressOnNewTabButton_contextualIdentities": { "message": "den Container auszuwählen" },
+  "config_longPressOnNewTabButton_contextualIdentities": { "message": "eine Tab-Umgebung auszuwählen" },
   "config_longPressOnNewTabButton_none":                 { "message": "(nichts)" },
   "config_longPressOnNewTabButton_after":                { "message": "\u200b" },  
   "config_showNewTabActionSelector_label": { "message": "Auswahl bei der Schaltfläche \"Neuer Tab \" anzeigen, wo der neue Tab geöffnet werden soll" },
-  "config_showContextualIdentitiesSelector_label": { "message": "Containerauswahl am \"Neuer Tab\"-Button anzeigen" },
+  "config_showContextualIdentitiesSelector_label": { "message": "Auswahl der Tab-Umgebung am \"Neuer Tab\"-Button anzeigen" },
     
   "config_newTabAction_caption": { "message": "Verhalten für Aktionen, die einen neuen Tab öffnen (andere Symbolleisten-Schaltflächen, Tastenkombinationen und andere)" },
   "config_autoAttachOnNewTabCommand_before": { "message": "Neuen leeren Tab als " },
@@ -218,7 +218,7 @@
   "config_autoAttachSameSiteOrphan_sibling": { "message": "Tab auf der Ebene des aktiven Tab" },
   "config_autoAttachSameSiteOrphan_nextSibling": { "message": "direkten Nachbar auf der Ebene des aktiven Tab" },
   "config_autoAttachSameSiteOrphan_after": { "message": "\u200b" },
-  "config_inheritContextualIdentityToSameSiteOrphan_label": { "message": "Den Container vom aktuellen Tab erben" },
+  "config_inheritContextualIdentityToSameSiteOrphan_label": { "message": "Die Tab-Umgebung vom aktuellen Tab erben" },
   
   "config_insertNewChildAt_caption": { "message": "Einfügeposition neuer untergeordneter Tabs" },
   "config_insertNewChildAt_noControl": { "message": "Keine Voreinstellung (das Verhalten von Firefox oder anderer Tab-Add-Ons beibehalten)" },
@@ -237,7 +237,7 @@
 
   "config_autoGroupNewTabsFromPinned_label": { "message": "Tabs automatisch gruppieren, die aus dem gleichen angehefteten Tab heraus geöffnet werden" },
 
-  "config_inheritContextualIdentityToNewChildTab_label": { "message": "Den Container des übergeordneten Tabs an einen neuen leeren Tab vererben" },
+  "config_inheritContextualIdentityToNewChildTab_label": { "message": "Die Tab-Umgebung des übergeordneten Tabs an einen neuen leeren Tab vererben" },
 
 
   "config_treeBehavior_caption": { "message": "Verhalten der Zweige" },
@@ -353,6 +353,8 @@
   "tabContextMenu_pin_label":         { "message": "Tab an&heften" },
   "tabContextMenu_unpin_label":       { "message": "Ta&b ablösen" },
   "tabContextMenu_duplicate_label":   { "message": "Tab &klonen" },
+  "tabContextMenu_reopenInContainer_label":             { "message": "Öffn&en in Tab-Umgebung" },
+  "tabContextMenu_reopenInContainer_noContainer_label": { "message": "Kei&ne Tab-Umgebung" },
   "tabContextMenu_tearOff_label":     { "message": "I&n neues Fenster verschieben" },
 
   "tabContextMenu_reloadAll_label":   { "message": "Alle &Tabs neu laden" },
@@ -362,4 +364,15 @@
 
   "tabContextMenu_undoClose_label":   { "message": "&Geschlossenen Tab wiederherstellen" },
   "tabContextMenu_close_label":       { "message": "Tab s&chließen" }
+
+  "tabContextMenu_reload_label_multiselected":      { "message": "Ausgewählte &Tabs neu laden" },
+  "tabContextMenu_mute_label_multiselected":        { "message": "Tabs st&umm schalten" },
+  "tabContextMenu_unmute_label_multiselected":      { "message": "Stummschaltung für Ta&bs aufheben" },
+
+  "tabContextMenu_pin_label_multiselected":         { "message": "Tabs an&heften" },
+  "tabContextMenu_unpin_label_multiselected":       { "message": "Ta&bs ablösen" },
+
+  "tabContextMenu_bookmark_label_multiselected": { "message": "&Lesezeichen für Tabs erstellen..." },
+
+"tabContextMenu_close_label_multiselected": { "message": "Ausgewählte Tabs &schließen" }
 }
