Allow to tear off dragged ttree from window by default.
Shift-drag allows to create links or bookmarks from dragged tree.
This commit also introduces a new configuration to invert behaviors for regular drag and shift-drag.

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -279,6 +279,10 @@
 
   "config_warnOnCloseTabs_label": { "message": "Warn me when I attempt to close multiple tabs" },
 
+  "config_allowBookmarkCreationFromDraggedTree_caption": { "message": "When a tree is dragged outside of the tab bar" },
+  "config_allowBookmarkCreationFromDraggedTree_false":   { "message": "Tear off from the window by default, create links or bookmarks by Shift-drag" },
+  "config_allowBookmarkCreationFromDraggedTree_true":    { "message": "Create links or bookmarks by default, tear off from the window by Shift-drag" },
+
 
   "config_shortcuts_caption": { "message": "Keyboard shortcuts" },
 
